Assert When Unlinking "Edit Source" Text Data-block #82849

Closed
opened 2020-11-19 17:54:45 +01:00 by Julian Eisel · 4 comments
Member

Blender Version
Broken: 72a199e148

Short description of error

BLI_assert(id->us == 0) in id_delete() fails when calling the text unlink operator for a text data-block created through "Edit Source".

Exact steps for others to reproduce the error

  • Enable Developer Extras in Preferences.
  • Switch to Scripting workspace.
  • Right-click > Edit Source on some button
  • Unlink the text data-block in the Text Editor.

A few things:

  • Why does TEXT_OT_unlink actually delete the data-block? This should either be corrected or the name changed.
  • I noticed we don't execute the UI foreach_id() callbacks (WM/screen) when deleting data-blocks, shouldn't we do this?
  • Apparently this isn't a new issue, 48418ec125.
**Blender Version** Broken: 72a199e148b20c **Short description of error** `BLI_assert(id->us == 0)` in `id_delete()` fails when calling the text unlink operator for a text data-block created through "Edit Source". **Exact steps for others to reproduce the error** * Enable *Developer Extras* in Preferences. * Switch to *Scripting* workspace. * Right-click > *Edit Source* on some button * Unlink the text data-block in the Text Editor. ---- A few things: * Why does `TEXT_OT_unlink` actually delete the data-block? This should either be corrected or the name changed. * I noticed we don't execute the UI `foreach_id()` callbacks (WM/screen) when deleting data-blocks, shouldn't we do this? * Apparently this isn't a new issue, 48418ec125.
Author
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 64513df8b6

This issue was referenced by 64513df8b63a73ddea9015aa133d321fe1f062b0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-11-23 11:57:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82849
No description provided.