Fix T82849: Assert When Unlinking "Edit Source" Text Data-block.

Simplify and sanitize handling of usercounts for Text IDs generated
trhough `BKE_text_load_ex`.