source/blender/editors/space_text/text_ops.c
@@ -338,8 +338,6 @@ static int text_open_exec(bContext *C, wmOperator *op)
   RNA_string_get(op->ptr, "filepath", str);
 
   text = BKE_text_load_ex(bmain, str, BKE_main_blendfile_path(bmain), internal);
-  /* Texts have no user by default... Only the 'real' user flag. */
-  id_us_min(&text->id);
 
   if (!text) {
     if (op->customdata) {
